@@ -45,11 +45,11 @@
     "chai": "^4.1.2",
     "core-js": "^2.5.7",
     "eslint": "^4.19.1",
-    "futoin-asyncsteps": "^2.1.1",
+    "futoin-asyncsteps": "^2.1.2",
     "grunt": "^1.0.3",
     "grunt-babel": "^7.0.0",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-eslint": "^20.1.0",
+    "grunt-eslint": "^20.2.0",
     "grunt-jsdoc-to-markdown": "^4.0.0",
     "grunt-mocha-istanbul": "^5.0.2",
     "grunt-mocha-phantomjs": "^4.0.0",
@@ -60,6 +60,6 @@
     "webpack": "^4.12.0"
   },
   "peerDependencies": {
-    "futoin-asyncsteps": "^2.1.1"
+    "futoin-asyncsteps": "^2.1.2"
   }
 }
