@@ -1,4 +1,7 @@
 
+=== (next) ===
+CHANGED: redesigned event calling to consume less event loop iterations
+
 === 2.1.0 (2018-06-09) ===
 CHANGED: to use ActiveAsyncTool from AsyncSteps for event callback scheduling
 
